# mnemis

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOVER-macos-keychain-biometric.md  README.md
.cargo/: config.toml
.githooks/: pre-commit
app/: Cargo.toml  entitlements.plist.template  tauri.conf.json
app/capabilities/: default.json
app/src/: appearance.rs  lib.rs  main.rs  test_support.rs  tray.rs
app/tests/: ui_smoke.rs
app/ui/: Cargo.toml  Trunk.toml  index.html  styles.css
app/ui/src/: components.rs  main.rs  markdown.rs
attic/v1/: Cargo.toml
attic/v1/src/: imap_client.rs  repl.rs
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  main.rs
engine/: Cargo.toml
engine/migrations/: 0001_initial_schema.sql  0002_actions_vec.sql  0003_dismissal_feedback_kind.sql  0004_message_recipients.sql  0005_caldav_sync.sql  0006_chat_compaction.sql
engine/src/: agent.rs  config.rs  db.rs  embed.rs  ingest.rs  lib.rs  llm.rs  maintenance.rs  mutations.rs  orchestrator.rs  queries.rs  secrets.rs  settings.rs  test_util.rs
engine/src/chat/: compact.rs  mod.rs  prompt.rs  store.rs  tools.rs
engine/src/extract/: mod.rs  prompt.rs  tools.rs  trace.rs
engine/src/source/: imap.rs  imap_utf7.rs  mod.rs
engine/src/sync/: caldav.rs  mod.rs  reconcile.rs  vevent.rs  vtodo.rs
engine/tests/: extract.rs
src/: agent.rs  config.rs  imap_client.rs  llm.rs  main.rs  memory.rs  prompt.rs  repl.rs  state.rs  tools.rs
types/: Cargo.toml
types/src/: lib.rs
ui-probe/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
