[package]
name = "mnemis-app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
mnemis-engine = { path = "../engine" }
mnemis-types = { path = "../types" }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = [] }
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite-bundled", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# UI-driver probe binary — separate so the main app build doesn't pull in
# fantoccini/hyper unnecessarily. Run with `cargo run -p mnemis-app --bin
# ui-probe --features ui-probe`.
ui-probe = ["dep:fantoccini", "dep:tokio-stream", "dep:libc"]

[dependencies.fantoccini]
version = "0.22.1"
optional = true

[dependencies.tokio-stream]
version = "0.1.18"
optional = true

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.176"
optional = true

[dev-dependencies]
tempfile = "3.27.0"
chrono = "0.4.44"

[[bin]]
name = "mnemis-app"
path = "src/main.rs"

[[bin]]
name = "ui-probe"
path = "src/bin/ui_probe.rs"
required-features = ["ui-probe"]
