[package]
name = "mnemis-app"
version = "0.1.0"
edition = "2024"
# Tauri's bundler also reads this — without it, `cargo tauri build` walks
# every `[[bin]]` and tries to ship `ui-probe`, which is only built behind a
# feature gate.
default-run = "mnemis-app"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
mnemis-engine = { path = "../engine" }
mnemis-types = { path = "../types" }
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-opener = "2.5.4"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite-bundled", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# Exposes `pub mod test_support` for the standalone `ui-probe` crate and the
# `ui_smoke` integration test. Gated so the default `mnemis-app` build
# doesn't pull in fantoccini etc.
ui-probe = ["dep:fantoccini", "dep:tokio-stream", "dep:libc"]

[dependencies.fantoccini]
version = "0.22.1"
optional = true

[dependencies.tokio-stream]
version = "0.1.18"
optional = true

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.176"
optional = true

# Linux system appearance (accent color + color scheme) via the XDG desktop
# portal. `settings` gates the org.freedesktop.portal.Settings wrapper; `tokio`
# routes zbus through the app's runtime.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.11", default-features = false, features = ["tokio", "settings"] }

# macOS system appearance via NSUserDefaults (AppleInterfaceStyle for dark mode,
# AppleAccentColor for the accent). Same objc2 family the keychain backend uses.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = ["alloc", "NSString", "NSUserDefaults"] }

[dev-dependencies]
tempfile = "3.27.0"
chrono = "0.4.44"

[[bin]]
name = "mnemis-app"
path = "src/main.rs"
