[package]
name = "mnemis-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-rust"] }
mnemis-engine = { path = "../engine" }
rpassword = "7.5.3"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["sqlite-bundled", "runtime-tokio", "macros", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
