[package]
name = "mnemis-ui"
version = "0.1.0"
edition = "2024"

[workspace]
# Standalone — excluded from the parent workspace so wasm-only deps don't
# pollute the host-target build graph.

[dependencies]
mnemis-types = { path = "../../types" }
leptos = { version = "0.8.19", features = ["csr"] }
leptos_router = "0.8.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.122"
wasm-bindgen-futures = "0.4.72"
js-sys = "0.3.99"
console_error_panic_hook = "0.1.7"
gloo-console = "0.3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
